--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Showcase - Mekar Rasa</title>
+    <title>Products - Mekar Rasa</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,12 +31,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/"
+                <a class="nav-link" aria-current="page" href="/"
                   >Showcase</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/products">Products</a>
+                <a class="nav-link active" href="/products">Products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -58,42 +58,8 @@
       </nav>
       <main class="container">
         <div class="mt-4">
-          <h2>Showcase</h2>
+          <h2>Products</h2>
           <ul class="mkr-product-list list-inline d-lg-flex flex-wrap">
-            <li>
-              <div class="mkr-product-card card">
-                <img
-                  src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1399&q=80"
-                  class="card-img-top"
-                  alt="Product Card Image Alt"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="mkr-product-card card">
-                <img
-                  src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1399&q=80"
-                  class="card-img-top"
-                  alt="Product Card Image Alt"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </li>
             <li>
               <div class="mkr-product-card card">
                 <img
