--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/mkr-product.css" />
+    <script src="/dist/app.js" defer></script>
   </head>
   <body>
     <div id="app">
