--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,7 @@
       <main class="container">
         <div class="mt-4">
           <h2>Showcase</h2>
+          <div id="react-app"></div>
           <ul class="mkr-product-list list-inline d-lg-flex flex-wrap">
             <li>
               <div class="mkr-product-card card">
