Showcase page consume API with skeleton fallback

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/mkr-product.css" />
+    <link rel="stylesheet" href="/css/mkr-skeleton.css" />
     <script src="/dist/app.js" defer></script>
   </head>
   <body>
@@ -19,77 +20,90 @@
       <main class="container">
         <div class="mt-4">
           <h2>Showcase</h2>
-          <div id="react-app"></div>
-          <ul class="mkr-product-list list-inline d-lg-flex flex-wrap">
-            <li>
-              <div class="mkr-product-card card">
-                <img
-                  src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1399&q=80"
-                  class="card-img-top"
-                  alt="Product Card Image Alt"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div id="react-app">
+            <ul class="mkr-product-list list-inline d-lg-flex flex-wrap">
+              <li>
+                <div class="mkr-product-card card">
+                  <div
+                    class="mkr-skeleton-img card-img-top"
+                    alt="Product Card Image Alt"
+                  ></div>
+                  <div class="card-body">
+                    <div
+                      class="mkr-skeleton-text card-title"
+                      style="margin-bottom: 1rem"
+                    ></div>
+                    <div class="mkr-skeleton-text card-title"></div>
+                    <div class="mkr-skeleton-text mkr-skeleton-text--md"></div>
+                    <div
+                      class="mkr-skeleton-btn"
+                      style="margin-top: 1rem"
+                    ></div>
+                  </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="mkr-product-card card">
-                <img
-                  src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1399&q=80"
-                  class="card-img-top"
-                  alt="Product Card Image Alt"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </li>
+              <li>
+                <div class="mkr-product-card card">
+                  <div
+                    class="mkr-skeleton-img card-img-top"
+                    alt="Product Card Image Alt"
+                  ></div>
+                  <div class="card-body">
+                    <div
+                      class="mkr-skeleton-text card-title"
+                      style="margin-bottom: 1rem"
+                    ></div>
+                    <div class="mkr-skeleton-text card-title"></div>
+                    <div class="mkr-skeleton-text mkr-skeleton-text--md"></div>
+                    <div
+                      class="mkr-skeleton-btn"
+                      style="margin-top: 1rem"
+                    ></div>
+                  </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="mkr-product-card card">
-                <img
-                  src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1399&q=80"
-                  class="card-img-top"
-                  alt="Product Card Image Alt"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </li>
+              <li>
+                <div class="mkr-product-card card">
+                  <div
+                    class="mkr-skeleton-img card-img-top"
+                    alt="Product Card Image Alt"
+                  ></div>
+                  <div class="card-body">
+                    <div
+                      class="mkr-skeleton-text card-title"
+                      style="margin-bottom: 1rem"
+                    ></div>
+                    <div class="mkr-skeleton-text card-title"></div>
+                    <div class="mkr-skeleton-text mkr-skeleton-text--md"></div>
+                    <div
+                      class="mkr-skeleton-btn"
+                      style="margin-top: 1rem"
+                    ></div>
+                  </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="mkr-product-card card">
-                <img
-                  src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1399&q=80"
-                  class="card-img-top"
-                  alt="Product Card Image Alt"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </li>
+              <li>
+                <div class="mkr-product-card card">
+                  <div
+                    class="mkr-skeleton-img card-img-top"
+                    alt="Product Card Image Alt"
+                  ></div>
+                  <div class="card-body">
+                    <div
+                      class="mkr-skeleton-text card-title"
+                      style="margin-bottom: 1rem"
+                    ></div>
+                    <div class="mkr-skeleton-text card-title"></div>
+                    <div class="mkr-skeleton-text mkr-skeleton-text--md"></div>
+                    <div
+                      class="mkr-skeleton-btn"
+                      style="margin-top: 1rem"
+                    ></div>
+                  </div>
                 </div>
-              </div>
-            </li>
-          </ul>
+              </li>
+            </ul>
+          </div>
         </div>
       </main>
     </div>
