--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="/css/mkr-product.css" />
     <link rel="stylesheet" href="/css/mkr-skeleton.css" />
-    <script src="/dist/app.js" defer></script>
+    <script src="/dist/showcase.js" defer></script>
   </head>
   <body>
     <div id="app">
@@ -21,88 +21,7 @@
         <div class="mt-4">
           <h2>Showcase</h2>
           <div id="react-app">
-            <ul class="mkr-product-list list-inline d-lg-flex flex-wrap">
-              <li>
-                <div class="mkr-product-card card">
-                  <div
-                    class="mkr-skeleton-img card-img-top"
-                    alt="Product Card Image Alt"
-                  ></div>
-                  <div class="card-body">
-                    <div
-                      class="mkr-skeleton-text card-title"
-                      style="margin-bottom: 1rem"
-                    ></div>
-                    <div class="mkr-skeleton-text card-title"></div>
-                    <div class="mkr-skeleton-text mkr-skeleton-text--md"></div>
-                    <div
-                      class="mkr-skeleton-btn"
-                      style="margin-top: 1rem"
-                    ></div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="mkr-product-card card">
-                  <div
-                    class="mkr-skeleton-img card-img-top"
-                    alt="Product Card Image Alt"
-                  ></div>
-                  <div class="card-body">
-                    <div
-                      class="mkr-skeleton-text card-title"
-                      style="margin-bottom: 1rem"
-                    ></div>
-                    <div class="mkr-skeleton-text card-title"></div>
-                    <div class="mkr-skeleton-text mkr-skeleton-text--md"></div>
-                    <div
-                      class="mkr-skeleton-btn"
-                      style="margin-top: 1rem"
-                    ></div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="mkr-product-card card">
-                  <div
-                    class="mkr-skeleton-img card-img-top"
-                    alt="Product Card Image Alt"
-                  ></div>
-                  <div class="card-body">
-                    <div
-                      class="mkr-skeleton-text card-title"
-                      style="margin-bottom: 1rem"
-                    ></div>
-                    <div class="mkr-skeleton-text card-title"></div>
-                    <div class="mkr-skeleton-text mkr-skeleton-text--md"></div>
-                    <div
-                      class="mkr-skeleton-btn"
-                      style="margin-top: 1rem"
-                    ></div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="mkr-product-card card">
-                  <div
-                    class="mkr-skeleton-img card-img-top"
-                    alt="Product Card Image Alt"
-                  ></div>
-                  <div class="card-body">
-                    <div
-                      class="mkr-skeleton-text card-title"
-                      style="margin-bottom: 1rem"
-                    ></div>
-                    <div class="mkr-skeleton-text card-title"></div>
-                    <div class="mkr-skeleton-text mkr-skeleton-text--md"></div>
-                    <div
-                      class="mkr-skeleton-btn"
-                      style="margin-top: 1rem"
-                    ></div>
-                  </div>
-                </div>
-              </li>
-            </ul>
+            <%- include('../partials/product-list-skeleton'); %>
           </div>
         </div>
       </main>
