--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -11,6 +11,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/mkr-product.css" />
+    <link rel="stylesheet" href="/css/mkr-skeleton.css" />
+    <script src="/dist/products.js" defer></script>
   </head>
   <body>
     <div id="app">
@@ -18,42 +20,9 @@
       <main class="container">
         <div class="mt-4">
           <h2>Products</h2>
-          <ul class="mkr-product-list list-inline d-lg-flex flex-wrap">
-            <li>
-              <div class="mkr-product-card card">
-                <img
-                  src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1399&q=80"
-                  class="card-img-top"
-                  alt="Product Card Image Alt"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="mkr-product-card card">
-                <img
-                  src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1399&q=80"
-                  class="card-img-top"
-                  alt="Product Card Image Alt"
-                />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </li>
-          </ul>
+          <div id="react-app">
+            <%- include('../partials/product-list-skeleton', {route: 'products'}); %>
+          </div>
         </div>
       </main>
     </div>
